--- a/Lab 9/enzyme-kinetics-part1-student.ipynb
+++ b/Lab 9/enzyme-kinetics-part1-student.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "### Fitting the data using a simple linear model to obtain the Molar Absorption Coefficient\n",
     "\n",
-    "This is the same exact procedure as the previous two labs, so you should be very familiar with it! You'll also notice that most of this code below was copied and pasted directly from lab 8 and just the variables names are changed!"
+    "This is the same exact procedure as the previous lab, so you should be very familiar with it! You'll also notice that most of this code below was copied and pasted directly from lab 8 and just the variables names are changed!"
    ]
   },
   {
