--- a/Lab 9/enzyme-kinetics-part1-student.ipynb
+++ b/Lab 9/enzyme-kinetics-part1-student.ipynb
@@ -404,7 +404,7 @@
    "source": [
     "#### Plotting the experimental data and linear fit\n",
     "\n",
-    "This is the same as the previous two labs."
+    "This is the same as the previous lab."
    ]
   },
   {
