--- a/Lab 9/enzyme-kinetics-part2-student.ipynb
+++ b/Lab 9/enzyme-kinetics-part2-student.ipynb
@@ -86,7 +86,7 @@
     "#### Doing a non-linear fit using lmfit\n",
     "You will notice that the Michaelis-Menten equation is a *non-linear* fit. We will use a library known as `lmfit` and use the `Model` class to do what's known as a *curve fit*.\n",
     "\n",
-    "So we need to define a *function* that defines the equation that we're fitting, in our case it's the Michaelis-Menten equation. For the scope of this course, we will not go too in depth on functions. However, you should know that functions are a nice way to define numerical equations. Functions take in variables (inputs), perform calculations, and then *return* the output.\n",
+    "We need to define a *function* that describes the equation that we're fitting. In our case it's the Michaelis-Menten equation. For the scope of this course, we will not go too in depth on functions. However, you should know that functions are a nice way to define numerical equations. Functions take in variables (inputs), perform calculations, and then *return* the output.\n",
     "\n",
     "Please refer to the python tutorial to learn more about the parts of a function."
    ]
