--- a/Lab 10/solar-cell-student.ipynb
+++ b/Lab 10/solar-cell-student.ipynb
@@ -179,7 +179,7 @@
     "## Part C: Do a parabolic fit\n",
     "\n",
     "#### Using lmfit\n",
-    "You'll notice that this is a *non-linear* fit, particularly a quadratic fit:\n",
+    "You'll notice that this is a *non-linear* fit, specifically a quadratic fit:\n",
     "\n",
     "$$y = ax^2 + bx + c$$\n",
     "\n",
