--- a/Tutorial/python-tutorial.ipynb
+++ b/Tutorial/python-tutorial.ipynb
@@ -579,7 +579,7 @@
     "\n",
     "Dataframes are more complicated: think of them as an Excel sheet that you have to control using python. Like Excel sheets, they have column headings and the data is arranged in tabular form. The numbers also behave like a `numpy` array, so you can perform orders of operations between columns.\n",
     "\n",
-    "For this tutorial we will be using a faux datasheet (these numbers are all false!) which is an Excel file that located in the same folder as this Jupyter notebook. We will first open this data using a module known as `pandas`.\n",
+    "For this tutorial we will be using a faux datasheet (these numbers are all false!) which is an Excel file that is located in the same folder as this Jupyter notebook. We will first open this data using a module known as `pandas`.\n",
     "\n",
     "Run the cell below and see what happens"
    ]
