--- a/Lab 9/enzyme-kinetics-part1.ipynb
+++ b/Lab 9/enzyme-kinetics-part1.ipynb
@@ -549,7 +549,7 @@
     "from scipy.stats import linregress\n",
     "\n",
     "'''CHANGE THE FILEPATH BELOW'''\n",
-    "kinetic_data = pd.read_csv(filepath_or_buffer=\"ENTER YOUR FILENAME HERE\", sep=\"\\t\", encoding=\"UTF-16 LE\")\n",
+    "kinetic_data = pd.read_csv(filepath_or_buffer=\"ENTER YOUR FILENAME HERE.csv\", sep=\"\\t\", encoding=\"UTF-16 LE\")\n",
     "'''CHANGE THE FILEPATH ABOVE'''\n",
     "\n",
     "print(kinetic_data)"
